@@ -100,6 +100,7 @@ struct source_context {
   FILE *f;
   unsigned int line_number;
   struct yy_buffer_state *yybuf;
+  gp_boolean last_char_is_nl;     /* If the last read character is a newline */
   struct source_context *prev;
 };
 
