@@ -1,3 +1,8 @@
+2012-10-21  Borut Razem  <borutr@users.sourceforge.net>
+  * gplink/gplink.h.in, gplink/scan.l:
+    fixed bug #256: atrtificially addding a \n ate EOF if missing
+  * gpasm/lst.c: fixed warning
+
 2012-10-13  Borut Razem  <borutr@users.sourceforge.net>
   * gpasm/gperror.c, gpasm/util.c:
     synched GPE_DIFFLAB error message with MPASM(X)
